# reveal

./: AGENTS.md  Custom Shaco Crate Library for References.txt  PROMPT_SUGGESTION.md  README.md  agents.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  version.json
analysis/: auto_report_pr_review.txt  pull16_report.txt
analysis/pr_diffs/: pr1.diff  pr10.diff  pr11.diff  pr12.diff  pr14.diff  pr15.diff  pr16.diff  pr17.diff  pr2.diff  pr3.diff  pr4.diff  pr5.diff  pr6.diff  pr7.diff  pr8.diff  pr9.diff  summary.txt
docs/: auto-open-auto-accept.md  auto-report-approaches.md  auto-report-state-flow.md  auto-report-vs-csharp.md  auto_features_data_flow.md  auto_report_plan.md
extension/: background.js  content.js  manifest.json
scripts/: validate-extension.js
src/: reveal.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: champ_select.rs  commands.rs  end_game.rs  end_of_game.rs  main.rs  post_game.rs  reporting.rs  reports.rs  state.rs  summoner.rs
src/lib/: config.ts  end_game.ts  end_of_game.ts  post-game.ts
src/lib/components/: navbar.svelte  reveal-count.svelte  tool.svelte
