[package]
name = "reveal"
version = "0.1.0"
description = "Reveal desktop app"
authors = ["web96lol"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0.79"
futures-util = "0.3.29"
open = "5.3.2"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
shaco = { git = "https://github.com/web96lol/shaco" }
tauri = { version = "1.5", features = [
    "macos-private-api",
    "window-unmaximize",
    "window-show",
    "window-unminimize",
    "window-maximize",
    "window-minimize",
    "window-close",
    "window-hide",
    "window-start-dragging",
    "shell-open",
    "system-tray"
] }
tauri-plugin-positioner = { version = "1.0", features = ["system-tray"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "time"] }
urlencoding = "2.1.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
