[package]
name = "reveal"
version = "0.0.0"
description = "Reveal"
authors = ["steele"]
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = [ "system-tray",
    "icon-png",
    "icon-ico",
    "window-unmaximize",
    "window-show",
    "window-unminimize",
    "window-maximize",
    "window-minimize",
    "window-close",
    "window-hide",
    "window-start-dragging",
    "shell-open",
    "macos-private-api"
] }
tauri-plugin-positioner = { version = "1.0", features = ["system-tray"] }

tokio = { version = "1.34.0", features = ["sync"] }
shaco = { git = "https://github.com/steele123/Shaco" }
futures-util = "0.3.29"

serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
open = "5.0.0"
urlencoding = "2.1.3"
anyhow = "1.0.79"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
